:green_heart: fix on the yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,13 +20,11 @@ compil dbg :
       - ./samples/validation/flups_validation_a2a
     when: on_success
   script:
-    - pwd
     - cd ../../
-    - pwd
-    - ls
     - export ARCH_FILE=make_arch/make.docker_valid_dbg
     - make all -j4
     - cd ./samples/validation
+    - export ARCH_FILE=../../make_arch/make.docker_valid_dbg
     - make all -j4
 
 compil opt :
@@ -45,6 +43,7 @@ compil opt :
     - export ARCH_FILE=make_arch/make.docker_valid_opt
     - make all -j4
     - cd ./samples/validation
+    - export ARCH_FILE=../../make_arch/make.docker_valid_opt
     - make all -j4
 
 #checks that the code runs without error in serial dbg
