:tada: use the reordered list generated by metis to create a graph_comm that will be used for a new comm.

--- a/samples/validation/Makefile
+++ b/samples/validation/Makefile
@@ -62,6 +62,11 @@ FLUPS_INC ?= ../../include
 FLUPS_LIB ?= ../../lib
 INC += -I$(FLUPS_INC)
 
+#---- METIS
+
+INC+= -I$(METIS_INC)
+LIB+= -L$(METIS_LIB) -lmetis  -Wl,-rpath,$(METIS_LIB)
+
 #-----------------------------------------------------------------------------
 ## add the wanted folders - common folders
 SRC := $(notdir $(wildcard $(SRC_DIR)/*.cpp))
