:wrench: more flexible integration of compilation with and without Metis

--- a/samples/validation/Makefile
+++ b/samples/validation/Makefile
@@ -63,9 +63,13 @@ FLUPS_LIB ?= ../../lib
 INC += -I$(FLUPS_INC)
 
 #---- METIS
-
-INC+= -I$(METIS_INC)
-LIB+= -L$(METIS_LIB) -lmetis  -Wl,-rpath,$(METIS_LIB)
+#check if HAVE_METIS
+ifneq (,$(findstring -DHAVE_METIS,$(CXXFLAGS)))
+	METIS_INC ?= /usr/include
+	METIS_LIB ?= /usr/lib
+	INC+= -I$(METIS_INC)
+	LIB+= -L$(METIS_LIB) -lmetis  -Wl,-rpath,$(METIS_LIB)
+endif
 
 #-----------------------------------------------------------------------------
 ## add the wanted folders - common folders
