:green_heart: adding the LGF's data inside the include file to the artifact list for opt and debug compilation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ compil dbg :
     paths: 
       - ./samples/validation/flups_validation_nb
       - ./samples/validation/flups_validation_a2a
+      - ./include/LGF_sym_acc12_64.ker
     when: on_success
   script:
     - cd ../../
@@ -36,6 +37,7 @@ compil opt :
     paths: 
       - ./samples/validation/flups_validation_nb
       - ./samples/validation/flups_validation_a2a
+      - ./include/LGF_sym_acc12_64.ker
     when: on_success
   script:
     - cd ../../
