--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -268,6 +268,18 @@ run 2d 3:1:
   dependencies: 
     - compil dbg  
 
+run 2d 4:1:
+  stage: test
+  only:
+    - master@examples/flups
+    - /^[0-9]-job-failed.*$/i@examples/flups
+    - merge_requests
+  script:
+    - mpirun -np 3 ./flups_validation_a2a -np 1 3 1 -res 17 17 1 -L 1 1 0 -bc 3 3 3 3 9 9 -k 1
+    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_443399_typeGreen=0.txt'))"
+  dependencies: 
+    - compil dbg  
+
 run metis:
   stage: test
   only:
