--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -520,7 +520,7 @@ run comm nb 2:1:
     - mpirun -np 3 ./flups_validation_nb -np 1 3 1 -res 17 17 17 -bc 3 3 4 1 1 1 
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_334111_typeGreen=0.txt'))"
 
-run vector a2a 1:1:
+run vector nb 1:1:
   stage: vector
   only:
     - master@examples/flups
@@ -532,7 +532,7 @@ run vector a2a 1:1:
   dependencies: 
     - compil dbg
 
-run vector a2a 2:1:
+run vector nb 2:1:
   stage: vector
   only:
     - master@examples/flups
@@ -544,7 +544,7 @@ run vector a2a 2:1:
   dependencies: 
     - compil dbg
 
-run vector a2a 3:1:
+run vector nb 3:1:
   stage: vector
   only:
     - master@examples/flups
@@ -556,7 +556,7 @@ run vector a2a 3:1:
   dependencies: 
     - compil dbg
 
-run vector a2a 4:1:
+run vector nb 4:1:
   stage: vector
   only:
     - master@examples/flups
