--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,18 @@ compil solve_advanced:
     - cd ./samples/solve_advanced_C
     - make 
 
+compil vortex_tube:
+  stage: build
+  only:
+    - /.*$/i@examples/flups
+    - merge_requests
+  script:
+    - cd ../../
+    - export ARCH_FILE=make_arch/make.docker_valid_opt
+    - make install_static -j4
+    - cd ./samples/solve_vtube
+    - make all -j4
+
 
 #checks that the code runs without error in serial dbg
 ################################################################################
