:green_heart: :bug: solving a file issue

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -375,6 +375,8 @@ run vector a2a 5:1:
     - /^[0-9]-job-failed.*$/i@examples/flups
     - merge_requests
   script:
+    - cd ../../
+    - cd samples/solve_vtube
     - python3.7 ./scripts/test_rot_a2a.py"
   dependencies: 
     - compil vortex_rot
@@ -605,6 +607,8 @@ run vector nb 5:1:
     - /^[0-9]-job-failed.*$/i@examples/flups
     - merge_requests
   script:
+    - cd ../..
+    - cd samples/solve_vtube
     - python3.7 ./scripts/test_rot_nb.py"
   dependencies: 
     - compil vortex_rot  
