:construction: Starting the implementation of the node-centered test case

--- a/samples/validation/Makefile
+++ b/samples/validation/Makefile
@@ -82,7 +82,7 @@ OBJ := $(SRC:%.cpp=$(OBJ_DIR)/%.o)
 
 ################################################################################
 $(OBJ_DIR)/%.o : $(SRC_DIR)/%.cpp $(HEAD)
-	$(CXX) $(CXXFLAGS) $(INC) $(DEF) -fPIC -MMD -c $< -o $@
+	$(CXX) $(CXXFLAGS) $(OPTS) $(INC) $(DEF) -fPIC -MMD -c $< -o $@
 
 ################################################################################
 default: all
