--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
 	// "dockerFile": "docker/Dockerfile",
 	// Rather use an image from DockerHub, first download it or build it
 	// "image": "immc/flups-valid:v0.4",
-	"image": "pbalty/flups-valid:v0.5",
+	"image": "vanreeslab/flups:v0.5",
 	// "image": "vanreeslab/murphy:v1.10",
 	// Set *default* container specific settings.json values on container create.
 	"settings": { 
