--- a/.gitlab-ci/flups-lm3.yml
+++ b/.gitlab-ci/flups-lm3.yml
@@ -1,6 +1,6 @@
 compil lm3 :
-  # tags:
-  #   - vanreeslab
+  tags:
+    - vanreeslab
   stage: build
   rules:
     - if: ($CI_OPEN_MERGE_REQUESTS)
@@ -22,7 +22,10 @@ compil lm3 :
     - echo "export DIR_NAME=${PATH2BIN}_${TAG}" > dir_name.sh;
     - ssh lm3 rm -rf ${PATH2BIN}_${TAG}
     - ssh lm3 mkdir -p ${PATH2BIN}_${TAG}
-    - scp -r * lm3:${PATH2BIN}_${TAG} #copy the sources from the runner: he will take the correct branch/version
+    - tar -czf flups_src.tar.gz --exclude=flups_src.tar.gz * 
+    # - scp -r * lm3:${PATH2BIN}_${TAG} #copy the sources from the runner: he will take the correct branch/version
+    - scp flups_src.tar.gz lm3:${PATH2BIN}_${TAG}
+    - ssh lm3 "cd {PATH2BIN}_${TAG};  tar xvzf flups_src.tar.gz"
     - ssh lm3 ln -fs ${PATH2BIN}_${TAG}/make_arch/make.lm3_gtest ${PATH2BIN}_${TAG}/make_arch.local
     - echo -e "\e[0Ksection_start:`date +%s`:my_first_section[collapsed=true]\r\e[0KCompilation of Flups"
     - ssh lm3 ${PATH2BIN}_${TAG}/scripts/flups_auto_build_lm3.sh ${PATH2BIN}_${TAG} ${PATH2BIN}_${TAG}/scripts/flups_loadmodule_lm3.sh #make the executable, and test if the file was created
@@ -39,8 +42,8 @@ compil lm3 :
   
 
 run lm3:
-  # tags:
-  #   - vanreeslab
+  tags:
+    - vanreeslab
   stage: deploy_cluster
   rules:
     - if: ($CI_OPEN_MERGE_REQUESTS)
@@ -59,8 +62,8 @@ run lm3:
 
 
 check result lm3:
-  # tags:
-  #   - vanreeslab
+  tags:
+    - vanreeslab
   stage: deploy_cluster
   rules:
     - if: ($CI_OPEN_MERGE_REQUESTS)
